Fix horizontal scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -125,11 +125,19 @@ body.fontLoaded {
 }
 
 .pokeCard img {
-  width: 20vh;
-  width: 20dvh;
-  height: auto;
+	width: 12vh;
+	width: 12dvh;
+	height: auto;
   image-rendering: pixelated;
 }
+
+@media screen and (min-width: 600px) {
+	.pokeCard img {
+		width: 20vh;
+		width: 20dvh;
+	}
+}
+
 .front .pokeCard img {
   width: 40%;
 }
